@@ -338,6 +338,8 @@
             * Billing :
                 - The method 'populate.Populator.create_reports()' has been replaced by a new one, '_populate_reports()'.
             * Opportunities :
+                - The UUIDs of the instances of the models 'SalesPhase' & 'Origin' created by the 'populate' script are now fixed (to be consistent between Creme instances).
+                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
                 - The class 'bricks.OpportunityCardHatBrick' (& the related template) has been reworked to follow the changes in app "persons".
                   A new class 'ContactsSummary' has been introduced, and the class variable "displayed_contacts_number" has been move into it.
                 - The method 'populate.Populator.create_report_n_graphes()' has been replaced by a new one, '_populate_report_n_graphes()'.
